--- a/templates/login.html
+++ b/templates/login.html
@@ -16,13 +16,14 @@
                                         <div class="login-register-form">
                                             <form action="{% url 'LoginPage' %}" method="post">
                                                 {% csrf_token %}
-                                                <input type="username" name="username" placeholder="Username" />
+                                                <input type="username" name="username" placeholder="Username" required/>
                                                 <input type="password" name="password" placeholder="Password" />
                                                 <div class="button-box">
                                                     <div class="login-toggle-btn">
-                                                        <a href="#">Change Password?</a>
+                                                        <a href="{% url 'ChangePass' %}">Change Password?</a>
                                                     </div>
                                                     <button type="submit"><span>Login</span></button>
+                                                    <h6 style="text-align: center;">Don't have an account?<a href="/Register/">Registration</a> </h6>
                                                 </div>
                                             </form>
                                         </div>
@@ -36,3 +37,4 @@
         </div>
         <!-- login area end -->
         {% include "footer.html" %}
+        
