--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,21 +1,6 @@
 {% include "header.html" %}
-        <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Checkout</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Checkout</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- breadcrumb-area end -->
+
+{% load cart_tag %}
         <!-- checkout area start -->
         <div class="checkout-area pt-100px pb-100px">
             <div class="container">
@@ -36,22 +21,29 @@
                                         <input type="text" />
                                     </div>
                                 </div>
-                                <div class="col-lg-12">
+
+                                <div class="col-lg-6 col-md-6">
+                                    <div class="billing-info mb-4">
+                                        <label>Date of Birth</label>
+                                        <input type="date" id="dob" name="dob" min="1906-01-01" max="2004-12-31" required>
+                                    </div>
+                                </div>
+                                <!-- <div class="col-lg-12">
                                     <div class="billing-info mb-4">
                                         <label>Company Name</label>
                                         <input type="text" />
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-lg-12">
                                     <div class="billing-select mb-4">
-                                        <label>Country</label>
+                                        <label>State</label>
                                         <select>
-                                            <option>Select a country</option>
-                                            <option>Azerbaijan</option>
-                                            <option>Bahamas</option>
-                                            <option>Bahrain</option>
+                                            <option>Gujarat</option>
+                                            <option>Rajeshtan</option>
+                                            <option>patan</option>
+                                            <!-- <option>Brazil</option>
                                             <option>Bangladesh</option>
-                                            <option>Barbados</option>
+                                            <option>Barbados</option> -->
                                         </select>
                                     </div>
                                 </div>
@@ -62,21 +54,23 @@
                                         <input placeholder="Apartment, suite, unit etc." type="text" />
                                     </div>
                                 </div>
-                                <div class="col-lg-12">
-                                    <div class="billing-info mb-4">
+                               
+                                <div class="col-lg-6">
+                                    <div class="billing-select mb-4">
                                         <label>Town / City</label>
-                                        <input type="text" />
+                                        <select>
+                                            <option>Ahmedabad</option>
+                                            <option>Gandhinagar</option>
+                                            <option>Vadodra</option>
+                                            <option>Surat</option>
+                                            <!-- <option></option>
+                                            <option>Barbados</option> -->
+                                        </select>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
                                     <div class="billing-info mb-4">
-                                        <label>State / County</label>
-                                        <input type="text" />
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="billing-info mb-4">
-                                        <label>Postcode / ZIP</label>
+                                        <label>PinCode</label>
                                         <input type="text" />
                                     </div>
                                 </div>
@@ -96,22 +90,6 @@
                             <div class="checkout-account mb-30px">
                                 <input class="checkout-toggle2 w-auto h-auto" type="checkbox" />
                                 <label>Create an account?</label>
-                            </div>
-                            <div class="checkout-account-toggle open-toggle2 mb-30">
-                                <input placeholder="Email address" type="email" />
-                                <input placeholder="Password" type="password" />
-                                <button class="btn-hover checkout-btn" type="submit">register</button>
-                            </div>
-                            <div class="additional-info-wrap">
-                                <h4>Additional information</h4>
-                                <div class="additional-info">
-                                    <label>Order notes</label>
-                                    <textarea placeholder="Notes about your order, e.g. special notes for delivery. " name="message"></textarea>
-                                </div>
-                            </div>
-                            <div class="checkout-account mt-25">
-                                <input class="checkout-toggle w-auto h-auto" type="checkbox" />
-                                <label>Ship to a different address?</label>
                             </div>
                             <div class="different-address open-toggle mt-30px">
                                 <div class="row">
