--- a/templates/shop-left-sidebar.html
+++ b/templates/shop-left-sidebar.html
@@ -38,14 +38,14 @@
                                                         <span class="new">New</span>
                                                         </span>
                                                         <div class="thumb">
-                                                            <a href="single-product.html" class="image">
+                                                            <a href="/Details/{{prod.id}}" class="image">
                                                                 <img src="/media/{{prod.image}}" alt="Product" />
                                                                 <!-- <img class="hover-image" src="/static/assets/images/product-image/1.webp" alt="Product" /> -->
                                                             </a>
                                                         </div>
                                                         <div class="content">
                                                             <span class="category"><a href="#">{{prod.categories}}</a></span>
-                                                            <h5 class="title"><a href="single-product.html">{{prod.name | truncatewords:6}}
+                                                            <h5 class="title"><a href="/Details/{{prod.id}}">{{prod.name | truncatewords:6}}
                                                                 </a>
                                                             </h5>
                                                             <span class="price">
