--- a/templates/footer.html
+++ b/templates/footer.html
@@ -188,8 +188,7 @@
                                         <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1" />
                                     </div>
                                     <div class="pro-details-cart">
-                                        <button class="add-cart"> Add To
-                                            Cart</button>
+                                        <a href="{% url 'cart_add' i.id %}" class="add-cart">Add To Cart</a> 
                                     </div>
                                     <div class="pro-details-compare-wishlist pro-details-wishlist ">
                                         <a href="wishlist.html"><i class="pe-7s-like"></i></a>
@@ -224,7 +223,7 @@
                         </div>
                         <h2 class="tt-title"><a href="#">{{cart.name }}</a></h2>
                         <br>
-                        <a href="{% url 'cart_add' cart.id %}">Add to cart</a>
+                            <a href="{% url 'cart_add' cart.id %}">Add to cart</a>
                     </div>
                 </div>
             </div>
