--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -1,6 +1,6 @@
 {% include "header.html" %}
         <!-- breadcrumb-area start -->
-
+        {% load cart_tag %}
         <!-- breadcrumb-area end -->
         <!-- Product Details Area Start -->
         <div class="product-details-area pt-100px pb-100px">
@@ -77,14 +77,7 @@
                                     <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1" />
                                 </div>
                                 <div class="pro-details-cart">
-                                    <button class="add-cart"> Add To
-                                        Cart</button>
-                                </div>
-                                <div class="pro-details-compare-wishlist pro-details-wishlist ">
-                                    <a href="wishlist.html"><i class="pe-7s-like"></i></a>
-                                </div>
-                                <div class="pro-details-compare-wishlist pro-details-wishlist ">
-                                    <a href="compare.html"><i class="pe-7s-refresh-2"></i></a>
+                                    <a href="{% url 'cart_add' prod.id %}" class="add-cart">Add To Cart</a>   
                                 </div>
                             </div>
                         </div>
